Updates Ansible draft

--- a/_drafts/2019-03-23-ansible.md
+++ b/_drafts/2019-03-23-ansible.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 published: true
-title: Configuring Your Development Environment
-description: Using Ansible locally to configure Amazon Cloud9
+title: Jumpstart Guide to Ansible
+description: Using Ansible to customize an Amazon Cloud9 Environment
 image_url: /images/posts/2019-03-23-ansible-logo.png
 date: 2019-03-23 12:56:00 -0800
 categories:
@@ -13,142 +13,105 @@ tags:
   - aws
   - software provisioning
   - configuration management
+  - git
 ---
 
-This guide is oriented around applying the "infrastructure as code" methodology
-to your local development environment, with the goal of creating a Github
-repository that will facilitate the setup and maintenance of your development
-environment.
+# Introduction
 
-This guide provides steps based on the setup of an Amazon Linux EC2 instance
-connected to the [Amazon Cloud9 Web-based IDE]. I've chosen this environment
-for this guide to ensure the commands below will consistently work for you,
-and also because of the low cost. It is [free for new Amazon AWS users] for 12
-months, or less than $10 per month to those using a `t2.micro` EC2 instance that
-is turned off by Cloud9 after 30 minutes of non-activity.
-
-This guide assumes that you already have an [Amazon Cloud9 environment setup]
-with an EC2 instance running the default Amazon Linux distribution based on
-Red-Hat Enterprise Linux (RHEL). It also assumes that you have experince with
-[Git].
-
-After you are finished with this guide, you should be able to use the
-configuration you have established to maintain your development environment,
-as well as automate the setup of a new development environment in the event
-that your EC2 instance is terminated/destroyed.
-
-You will also be able to continue beyond this guide in configuring additional
-systems to host your website or other applications, as well as automating
-deployment of software updates to those systems.
-
-[free for new Amazon AWS users]: https://aws.amazon.com/free/
-[Amazon Cloud9 Web-based IDE]: https://aws.amazon.com/cloud9/
-[amazon cloud9 environment setup]: https://docs.aws.amazon.com/cloud9/latest/user-guide/setup-express.html
-[git]: https://en.wikipedia.org/wiki/Git
-
-# Ansible
-
-[Ansible] is a an open-source tool you can use to install and configure
-software on your Linux systems, as well as deploy new software updates.
+This guide will help you get started on using [Ansible], an open-source tool
+you can use to automate and maintain the software and configurations of your
+Linux systems, as well as handle custom software deployments.
 
 Ansible is programmed in Python, however you do not need to know Python to use
-it. You may need to gain an understanding of [YAML], [Jinja templates], and read
+it. You may need to gain an understanding of [YAML], [Jinja templates], or read
 the [Ansible Project Documentation].
 
-This guide will use Ansible to setup and maintain your local development
-environment.
+In this guide we use Ansible to maintain the state of your local development
+environment. After you are done you'll be able to apply what you've learned
+beyond your local Linux environment.
+
+To follow this guide, it is recommended that you setup an [Amazon Cloud9]
+environment with the default Amazon Linux EC2 instance. The Cloud9 service is
+free, as is the EC2 service to [new Amazon AWS users] for the first 12 months.
+If you've used Amazon AWS before, then your cost should be less than $10 per
+month as long as you are using a `t2.micro` EC2 instance that is configured to
+turn off after 30 minutes of non-activity.
+
+If you do not have an environment setup yet, see the
+[Amazon Cloud9 Environment Setup] guide to get started.
+
+If your ultimate goal is to develop in the cloud, then provision your
+infrastructure and deploy new software in the cloud, then this guide will help
+you get started.
+
+This guide also assumes that you have experince with [Git]. This guide is
+oriented around the "infrastructure as code" methodology, where all our desired
+configurations are stored in a Git repository.
 
 [Ansible]: https://en.wikipedia.org/wiki/Ansible_(software)
 [Ansible Project Documentation]: https://docs.ansible.com/
 [YAML]: https://en.wikipedia.org/wiki/YAML
 [Jinja templates]: https://en.wikipedia.org/wiki/Jinja_(template_engine)
-
-## A Note About Idempotency
-
-Ansible is designed to be used to maintain your systems in an Idempotent manner.
-This means that you can run commands with Ansible that will always bring about
-the desired outcome, no matter how many times you run them.
-
-Ansible does this by checking if an aspect of your system is in the desired
-state currently, and only if it is not does it make the required change to the
-system.
-
-It is possible that with certain practices you can run into an issue known as
-"configuration drift". Refer to [Ansible Idempotency and Configuration Drift]
-for more information on avoiding this issue.
-
-[Ansible Idempotency and Configuration Drift]: https://shadow-soft.com/ansible-idempotency-configuration-drift/
+[new Amazon AWS users]: https://aws.amazon.com/free/
+[Amazon cloud9 environment setup]: https://docs.aws.amazon.com/cloud9/latest/user-guide/setup-express.html
+[Amazon Cloud9]: https://aws.amazon.com/cloud9/
+[git]: https://en.wikipedia.org/wiki/Git
 
 # Establishing a Git repository
 
-You want to establish a [new Github repository] to store your Ansible
-configuration. After you've done this, use Git to clone the repository
-into your local environment.
+Create a [new Github repository] to store your Ansible configuration. After
+you've done this, use Git to clone the repository into your local environment.
 
-Here's the command I used with [my own repository]:
-
+Here's the command I used with my own repository:
 ```bash
 git clone git@github.com:redconfetti/cloud9-dev.git
 ```
 
 [new Github repository]: https://github.com/new
-[my own repository]: https://github.com/redconfetti/cloud9-dev 
 
 # Installing the Ansible Engine
 
-To ensure that we don't have any conflicts between Python v2.7 and v3.6
-installed
+Amazon Linux includes Python 2.7 and 3.5 by default. Installing Ansible using
+the Yum package manager leads to conflicts, so use the Python 2.7 version of
+PIP to install Ansible.
 
 ```bash
 # Install Ansible using Python 2.7
 /usr/bin/pip-2.7 install ansible
 ```
 
-Next setup a script in your own repository to run initial
-setup commands (`setup.sh`).
-```bash
-#!/usr/bin/env bash
-
-# Update OS
-sudo yum update
-
-# Install Ansible using Python 2.7
-sudo /usr/bin/pip-2.7 install ansible
-```
-
-Use Git to make the script executable.
-```bash
-git add --chmod=+x setup.sh
-```
-
-See [Ansible Installation Guide] for other system installation instructions.
+If you're using a different Linux distribution, see the
+[Ansible Installation Guide] for other system installation instructions.
 
 [Ansible Installation Guide]: https://docs.ansible.com/ansible/latest/installation_guide/intro_installation.html
 
 # Ansible Configuration
 
 The default Ansible configuration file is located under
-`/etc/ansible/ansible.cfg`. A `.ansible.cfg` file located in your home directory
-can also be configured to over-ride these defaults.
+`/etc/ansible/ansible.cfg`. Ansible will over-ride these default settings if
+there are any found in a `.ansible.cfg` file located in your home directory, or
+an `ansible.cfg` file located in the current directory.
 
-Ansible is designed to be used from a specific machine that is designated as the
-"management node" that is used to orchestrate the setup and configuration of
-many other machines. This is why the default configurations exist globally
+Ansible is designed to be used from a specific machine, designated as the
+"management node", that is used to orchestrate the setup and configuration of
+other machines. This is why the default configurations exist globally
 under `/etc/ansible`.
 
-We want Ansible to use the files stored in our Git repository, so create a
-new `ansible.cfg` file in the root folder of the new repository.
+Fo our purposes we want Ansible to use the configuration we place in our
+repository, so create a new `ansible.cfg` file in the root folder of your
+repository with the following contents
 
-```
+```INI
 [defaults]
 inventory = hosts.yml
 ```
 
-When running Ansible commands from the root directory of our repository, it will
-also over-ride the default and user-specific configurations, but keep in mind
-that this method can introduce a security risk.
+This will help us to avoid needing to use the `-i hosts.yml` parameter with
+our Ansible commands, however it does introduce a possible security risk.
+Since we're running an EC2 instance that we're not sharing with other users,
+we're not running the risk of another user modifying our `ansible.cfg` file.
 
-See Ansible Configuration Documentation:
+Ansible Configuration Documentation:
 
 - [Avoiding security risks with ansible.cfg in the current directory]
 - [Configuring Ansible]
@@ -166,19 +129,22 @@ Ansible is able to manage the state of multiple machines. By default, the
 inventory is defined in `/etc/ansible/hosts` using a format similar to an
 [INI file]. Alternatively you can use a YAML file to define your inventory.
 
-As you saw above, we configured Ansible to recognize the `hosts.yaml` file
+As you saw above, we configured Ansible to recognize the `hosts.yml` file
 located in the root directory of the repository.
 
-Create that file now with the following contents that defines the local
+Create the `hosts.yml` file with the following contents that defines the local
 machine as 'local'.
-```yaml
+```yml
 all:
   hosts:
     local:
       ansible_host: localhost
       ansible_connection: local
-      ansible_python_interpreter: /usr/bin/python27
 ```
+
+This configures a host named 'local' that represents the local EC2 instance
+that you're working from when you use the command line interface (Terminal)
+in Cloud9.
 
 For more information, see [Ansible - Working with Inventory]
 
@@ -187,9 +153,8 @@ For more information, see [Ansible - Working with Inventory]
 
 # Ansible Ad-Hoc Commands
 
-Ansible is designed to connect to each host using SSH key authentication,
-run the commands necessary, and then output the results of each task in the
-output of the command line. Because we're configured to connect to our local
+Ansible is designed to connect to hosts configured in your inventory file using
+SSH key authentication. Because we're configured to connect to our local
 system, we do not have to worry about SSH connections or configuration.
 
 Ansible can be used to perform checks against hosts using a single command
@@ -204,57 +169,59 @@ local | SUCCESS => {
 }
 ```
 
-Now we're ready to get started with the actual configuration.
+If you see the output above indicating success, then you're ready to move onto
+the next step.
 
-See [Introduction To Ad-Hoc Commands]
+For more information, see [Introduction To Ad-Hoc Commands].
 
 [Introduction To Ad-Hoc Commands]: https://docs.ansible.com/ansible/latest/user_guide/intro_adhoc.html
 
 # Ansible Playbooks
 
-Ad-hoc commands are useful, but playbooks are where we can define the state of
-our system(s).
+Ad-hoc commands are useful, but playbooks are where we can define multiple
+tasks that maintain the state of your system(s).
 
 Much like the `hosts.yml` file defined above, playbooks are defined in YAML
 format. YAML is not a programming language, but a format for storing
 information. In this case the information is our configuration that Ansible
-modules are defined to interpret and apply to certain hosts.
+modules are defined to interpret and apply to the hosts we specify.
 
-A playbook can contain one or more "plays" that applies a certain state known
-as a "role" to a group of hosts. A role is represented by one or more tasks
-performed by an Ansible module.
+A playbook can contain one or more "plays" that applies a certain state to a
+group of hosts. 
 
-The Amazon Linux distribution used by the EC2 instance uses a package manager
-called Yum (Yellowdog Updater Modified). Ansible provides the [Yum module] to
-use this package manager to install or update the software on the host.
+The Amazon Linux distribution uses a package manager called Yum (Yellowdog
+Updater Modified). Ansible provides a [Yum module] which allows us to use this
+package manager to install and update software packages on the host.
 
-Create a file named `local.yml` with the following contents.
-```yaml
+Create a file named `local.yml` with the following contents in your root
+directory.
+
+```yml
 ---
 # This playbook deploys the entire setup to the Cloud9 development environment.
-- hosts: localhost
-  connection: local
+- hosts: local
   tasks:
     - name: upgrade all packages
+      become: yes
       yum:
         name: '*'
         state: latest
 ```
 
-Run the following command to run this playbook against the local environment.
-
+Next, run the following command to run this playbook.
 ```bash
 ansible-playbook local.yml
 ```
 
-```shell
-PLAY [localhost] ***************************************************************
+You should see output similar to this:
+```bash
+PLAY [local] *******************************************************************
 
 TASK [Gathering Facts] *********************************************************
-ok: [localhost]
+ok: [local]
 
 TASK [upgrade all packages] ****************************************************
-ok: [localhost]
+ok: [local]
 
 PLAY RECAP *********************************************************************
 localhost                  : ok=2    changed=0    unreachable=0    failed=0   
@@ -266,7 +233,7 @@ See [Intro to Playbooks] or [Modules by Category].
 [Intro to Playbooks]: https://docs.ansible.com/ansible/latest/user_guide/playbooks_intro.html
 [Modules by Category]: https://docs.ansible.com/ansible/latest/modules/modules_by_category.html
 
-# Modules
+# Ansible Modules
 
 We just covered a task that used the Yum module to update all the installed
 software packages on the server.
@@ -289,106 +256,34 @@ ansible-doc hostname
 
 You can also browse modules online starting with [Modules by Category].
 
-# Templates
+# Ansible Templates
 
-Most Unix/Linux utilities or daemons can be configured using simple text files.
-Ansible supports the ability to define your configurations within templates
-that support the Jinja2 template syntax. You can also simplify your
-configuration by creating YAML files that store the variables that are injected
-into these templates.
+Most Unix/Linux utilities and daemons can be configured using plain text files.
+Ansible supports the ability to define configuration file templates that use the
+Jinja2 template syntax.
 
-Let's create a file called `gitconfig.j2` with our desired Git configuration.
-
-```INI
-[core]
-  editor = /usr/bin/nano
-[user]
-  name = PeeWee Herman
-  email = peewee@example.com
-```
-
-Now update the `local.yml` playbook file so that it also includes a task to
-obtain ouyput the current username variable (`ansible_user_id`), and then
-another task to configure the `.gitconfig` in that users home directory.
-
-```yaml
----
-# This playbook deploys the entire setup to the Cloud9 development environment.
-- hosts: localhost
-  connection: local
-  tasks:
-    - name: upgrade all packages
-      yum:
-        name: '*'
-        state: latest
-    - debug: var=ansible_user_id
-    - name: configure git client
-      template:
-        src: gitconfig.j2
-        dest: "/home/{{ ansible_user_id }}/.gitconfig"
-        owner: "{{ ansible_user_id }}"
-        group: "{{ ansible_user_id }}"
-        mode: 0644
-```
-
-As you can see, the 'debug' task allowed us to see what value is registered
-for the `ansible_user_id` variable. This is useful for troubleshooting
-your task configurations when they are failing.
-
-```shell
-$ ansible-playbook local.yml
-
-PLAY [localhost] ***************************************************************
-
-TASK [Gathering Facts] *********************************************************
-ok: [localhost]
-
-TASK [upgrade all packages] ****************************************************
-ok: [localhost]
-
-TASK [debug] *******************************************************************
-ok: [localhost] => {
-    "ansible_user_id": "ec2-user"
-}
-
-TASK [configure git client] ****************************************************
-changed: [localhost]
-
-PLAY RECAP *********************************************************************
-localhost                  : ok=4    changed=1    unreachable=0    failed=0
-
-$ cat ~/.gitconfig
-[core]
-  editor = /usr/bin/nano
-[user]
-  name = PeeWee Herman
-  email = peewee@example.com
-```
-
-We can also define our variables within the playbook that can be included within
-the template. Redefine your `gitconfig.j2` file as shown. You'll notice we're
-also using the [ansible_managed] variable defined by Ansible itself in this 
-updated version of the template.
-
-__gitconfig.j2__
+Let's create a file called `gitconfig.j2` to define our Git client configuration.
 ```INI
 # {{ ansible_managed }}
 [core]
   editor = /usr/bin/nano
 [user]
-  name = {{dev_name}}
-  email = {{dev_email}}
+  name = {{git_client_name}}
+  email = {{git_client_name}}
 ```
 
-Next update the play in your playbook as follows.
+Now update the `local.yml` playbook file so that it includes the 'vars' that
+define our git client name and email address. Also add the tasks to output the
+value of the `ansible_user_id` variable, and configure the `.gitconfig` in that
+users home directory.
 
-__local.yml__
-```yaml
-- hosts: localhost
-  connection: local
+```yml
+---
+# This playbook deploys the entire setup to the Cloud9 development environment.
+- hosts: local
   vars:
-    dev_name: PeeWee Herman
-    dev_email: peewee@example.com
+    git_client_name: PeeWee Herman
+    git_client_email: peewee@example.com
   tasks:
     - name: upgrade all packages
       yum:
@@ -397,41 +292,41 @@ __local.yml__
     - debug: var=ansible_user_id
     - name: configure git client
       template:
-        src: gitconfig.j2
+        src: gitconfig
         dest: "/home/{{ ansible_user_id }}/.gitconfig"
         owner: "{{ ansible_user_id }}"
         group: "{{ ansible_user_id }}"
         mode: 0644
 ```
 
-After saving the changes, run the playbook again.
+As you can see, the 'debug' task allows us to see what value is registered
+for the `ansible_user_id` variable. This is useful for troubleshooting
+your task configurations when they are failing.
+
 ```bash
 $ ansible-playbook local.yml
 
-PLAY [localhost] ***************************************************************
+PLAY [local] *******************************************************************
 
 TASK [Gathering Facts] *********************************************************
-ok: [localhost]
+ok: [local]
 
 TASK [upgrade all packages] ****************************************************
-ok: [localhost]
+ok: [local]
 
 TASK [debug] *******************************************************************
-ok: [localhost] => {
+ok: [local] => {
     "ansible_user_id": "ec2-user"
 }
 
 TASK [configure git client] ****************************************************
-changed: [localhost]
+changed: [local]
 
 PLAY RECAP *********************************************************************
 localhost                  : ok=4    changed=1    unreachable=0    failed=0   
 ```
 
-Now check the state of the Git configuration file once again. The 'Ansible
-managed' comment at the top is simply a string that can be configured in
-the `ansible.cfg` to inform users that the configuration file being viewed
-is configured by Ansible.
+Now check the state of the Git configuration file.
 
 ```bash
 $ cat ~/.gitconfig
@@ -443,10 +338,14 @@ $ cat ~/.gitconfig
   email = peewee@example.com
 ```
 
-Although it causes Ansible to report that the template is not configured as
-expected everytime you run your play, you can configure Ansible to operate
-like it used to with the user and timestamp inserted into the "ansible_managed"
-string in every generated template.
+The 'Ansible managed' comment at the top is simply a string that can be
+configured in the `ansible.cfg` to inform users that the configuration file
+being viewed is configured by Ansible.
+
+`Ansible managed` is the default string for this variable. You can redefine
+this string to include the user-id of the Ansible user as well as the date and
+time, although this will result in Ansible reporting that the coniguration
+file has been changed everytime you run the task.
 
 __ansible.cfg__
 ```INI
@@ -454,6 +353,35 @@ __ansible.cfg__
 inventory = hosts.yml
 ansible_managed = Ansible managed, do not edit directly: last update by {uid} on %Y-%m-%d, %H:%M:%S
 ```
+
+Let's run the Playbook one more time.
+
+```bash
+$ ansible-playbook local.yml
+
+PLAY [local] *******************************************************************
+
+TASK [Gathering Facts] *********************************************************
+ok: [local]
+
+TASK [upgrade all packages] ****************************************************
+ok: [local]
+
+TASK [debug] *******************************************************************
+ok: [local] => {
+    "ansible_user_id": "ec2-user"
+}
+
+TASK [configure git client] ****************************************************
+changed: [local]
+
+PLAY RECAP *********************************************************************
+localhost                  : ok=4    changed=1    unreachable=0    failed=0  
+```
+
+As you can see, it reports that it changed the configuration file. If we check
+the configuration file, you'll see that it now includes the message with user,
+date, and time.
 
 ```bash
 $ cat ~/.gitconfig
@@ -466,3 +394,495 @@ $ cat ~/.gitconfig
 ```
 
 [ansible_managed]: https://docs.ansible.com/ansible/2.4/intro_configuration.html#ansible-managed
+
+# Ansible Roles
+
+If you placed all your tasks in a playbook, it could get very large and wouldn't
+be as easy to manage. This is why Ansible supports grouping your automation
+components (variables, templates, tasks, etc) into re-usable "roles".
+
+It's often that a role named 'common' is created to store settings that apply
+across all your hosts, such as updating the system software using Yum,
+setting the timezone, etc. Other roles are defined separate of the 'common' role
+that apply to certain nodes of your cluster or network, such as 'webserver' or
+'loadbalancer'. You can even get more detailed with roles named after the
+daemons you want running, such as 'apache' or 'nginx'. It's all up to you.
+
+Taken from [Ansible Docs - Roles]
+
+> Roles expect files to be in certain directory names. Roles must include at
+> least one of these directories, however it is perfectly fine to exclude any
+> which are not being used. When in use, each directory must contain a
+> `main.yml` file, which contains the relevant content:
+> 
+> * `tasks` - contains the main list of tasks to be executed by the role.
+> * `handlers` - contains handlers, which may be used by this role or even anywhere outside this role.
+> * `files` - contains files which can be deployed via this role.
+> * `templates` - contains templates which can be deployed via this role.
+> * `vars` - other variables for the role (see [Ansible Docs - Using Variables] for more information).
+> * `defaults` - default variables for the role (see [Ansible Docs - Using Variables] for more information).
+> * `meta` - defines some meta data for this role. See below for more details.
+
+Let's move our tasks to a new role called 'development'.
+
+To get started, we'll establish a directory for our roles to contain our
+`development` role. We'll set it up with a `tasks` and `templates` folder.
+Within `tasks` we'll create a new `main.yml` file, and we'll move our Git
+configuration template into the `templates` folder.
+
+```bash
+mkdir -p roles/development/tasks
+mkdir -p roles/development/templates
+touch roles/development/tasks/main.yml
+mv gitconfig.j2 roles/development/templates
+```
+
+It should look like this when you're done:
+
+- roles
+  - development
+    - tasks
+      - main.yml
+    - templates
+      - gitconfig.j2
+
+Next move your tasks from the `local.yml` to `roles/development/tasks/main.yml`.
+Additionally, update the path for the `gitconfig` template so that it is
+reflected as `templates/gitconfig`.
+
+```yml
+---
+- name: upgrade all packages
+  become: yes
+  yum:
+    name: '*'
+    state: latest
+- debug: var=ansible_user_id
+- name: configure git client
+  template:
+    src: templates/gitconfig
+    dest: "/home/{{ ansible_user_id }}/.gitconfig"
+    owner: "{{ ansible_user_id }}"
+    group: "{{ ansible_user_id }}"
+    mode: 0644
+```
+
+Now update `local.yml` so that it no longer defines the tasks for the play, but
+instead points to the `development` role.
+
+```yml
+---
+# This playbook deploys the entire setup to the Cloud9 development environment.
+- hosts: local
+  vars:
+    git_client_name: PeeWee Herman
+    git_client_email: peewee@example.com
+  roles:
+    - development
+```
+
+If you run `ansible-playbook local.yml` once again, the output should be the
+same as before with no errors.
+
+[Ansible Docs - Roles]: https://docs.ansible.com/ansible/latest/user_guide/playbooks_reuse_roles.html
+
+## Variables
+
+The Ansible engine makes it possible to re-use a role that you have defined
+to different hosts with differing configurations. This is made possible through
+the use of variables. Variables can be defined in your hosts file per each host.
+
+Let's move our Git name and email address from our `local.yml`
+playbook, and place it within `hosts.yml` so that it applies to our `local`
+host.
+
+Here we've defined a 'development' group, and have placed our 'local' host
+underneath that group. We've also defined the variables that should apply to
+all hosts within that 'development' group.
+```yml
+all:
+  children:
+    development:
+      hosts:
+        local:
+          ansible_host: localhost
+          ansible_connection: local
+      vars:
+        git_client_name: PeeWee Herman
+        git_client_email: peewee@example.com
+```
+
+If you want to inspect your inventory for errors, you can use the
+`ansible-inventory` command to inspect how Ansible is interpretting your
+configuration.
+
+```bash
+$ ansible-inventory --list
+{
+    "_meta": {
+        "hostvars": {
+            "local": {
+                "ansible_connection": "local", 
+                "ansible_host": "localhost", 
+                "git_client_email": "peewee@example.com", 
+                "git_client_name": "PeeWee Herman", 
+                "repository": "https://github.com/redconfetti/redconfetti.github.io", 
+            }
+        }
+    }, 
+    "all": {
+        "children": [
+            "development", 
+            "ungrouped"
+        ]
+    }, 
+    "development": {
+        "hosts": [
+            "local"
+        ]
+    }, 
+    "ungrouped": {}
+}
+
+$ ansible-inventory --graph
+@all:
+  |--@development:
+  |  |--local
+  |--@ungrouped:
+```
+
+The preferred way to store variables isn't to define them in the `hosts.yml`
+file though. Instead you can create a `host_vars` directory, and then name
+the files within it after each host. You can also create a `group_vars`
+directory, and then name the files within it after each group.
+
+Let's create a host variable file for our 'local' host.
+```bash
+mkdir host_vars
+touch host_vars/local.yml
+```
+
+Next let's move our variables from the `hosts.yml` into our
+`host_vars/local.yml` file.
+
+_host_vars/local.yml_
+```yml
+git_client_name: PeeWee Herman
+git_client_email: peewee@example.com
+```
+
+This should result in our hosts file being slim again.
+
+_hosts.yml_
+```yml
+all:
+  children:
+    development:
+      hosts:
+        local:
+          ansible_host: localhost
+          ansible_connection: local
+```
+
+### Facts
+
+In addition to the variables that you define, you can also use a feature of
+Ansible known as "facts". Facts are variables created by the Ansible engine that
+contain information about the host you are logging into... what user Ansible is
+acting as on the system, the command line environment, networking, etc.
+
+To get a list of all the variables Ansible collects about our system run
+the command: `ansible local -m setup`.
+
+### Defaults
+
+Roles are intended to be re-usable, but it could be tedious having to define
+variables for every single value that a task or template might need defined.
+
+This is why roles support defaults defined in `defaults/main.yml`.
+
+To make our role more flexible, let's define defaults for the name and email
+address used by the Git client.
+
+```bash
+mkdir -p roles/development/defaults
+touch roles/development/defaults/main.yml
+```
+
+After you've done this, add the following to `defaults/main.yml`.
+```yml
+git_client_name: "{{ ansible_user_gecos }}"
+git_client_email: "{{ ansible_user_id }}@{{ ansible_fqdn }}"
+```
+
+To properly test this, go into `host_vars/local.yml` and comment out the
+`git_client_name` and `git_client_email` variables.
+
+```
+# git_client_name: PeeWee Herman
+# git_client_email: peewee@example.com
+```
+
+Run the playbook once more and see what happens.
+```bash
+$ ansible-playbook local.yml
+
+$ cat ~/.gitconfig
+# Ansible managed, do not edit directly: last update by ec2-user on 2019-03-25, 19:42:28
+[core]
+  editor = /usr/bin/nano
+[user]
+  name = EC2 Default User
+  email = ec2-user@ip-172-31-18-245.us-west-2.compute.internal
+```
+
+As you can see Ansible provided our defaults in the configuration file. Now
+our role is more reusable, so you can share it with your friends.
+
+For more information, see [Ansible Docs - Using Variables].
+
+### Defining Variables in Files
+
+It's worth mentioning that you can also define variables in external files.
+You more than likely have some passwords and API keys that you surely don't
+want to check into your repository (even if it's private).
+
+To work around this, you can configure your playbook like the following.
+```yml
+---
+# This playbook deploys the entire setup to the Cloud9 development environment.
+- hosts: local
+  roles:
+   - development
+  vars_files:
+    - ~/.ansible_secrets.yml
+  tasks:
+    - debug: var=secret_password
+    - debug: var=some_api_key
+```
+
+Next create a `~/.ansible_secrets.yml` file with the following contents:
+```yml
+---
+secret_password: abcdef123456
+some_api_key: A65B90148F091E5F3F7E4DFFECD1B074
+```
+
+When you run your playbook, it should reflect the secrets you configured.
+```bash
+$ ansible-playbook local.yml 
+
+PLAY [local] *******************************************************************
+
+TASK [Gathering Facts] *********************************************************
+ok: [local]
+
+TASK [debug] *******************************************************************
+ok: [local] => {
+    "secret_password": "abcdef123456"
+}
+
+TASK [debug] *******************************************************************
+ok: [local] => {
+    "some_api_key": "A65B90148F091E5F3F7E4DFFECD1B074"
+}
+
+PLAY RECAP *********************************************************************
+local                      : ok=3    changed=0    unreachable=0    failed=0
+```
+
+Now you can define variables in a file that you want to keep secret, but not
+check them into your repository. At most you might want to check in a file
+named `ansible_secrets.example.yml` that contains bogus passwords and keys,
+and can be copied to `~/.ansible_secrets.yml` and then modified if needed
+in the future.
+
+For more information, see [Ansible Docs - Defining Variables In Files].
+
+[Ansible Docs - Defining Variables In Files]: https://docs.ansible.com/ansible/latest/user_guide/playbooks_variables.html#defining-variables-in-files
+[Ansible Docs - Using Variables]: https://docs.ansible.com/ansible/latest/user_guide/playbooks_variables.html
+
+# Ansible Vault
+
+Instead of defining your variables in a file that you keep separate of your
+repository, there is an option to store your secrets in an encrypted file
+within your repository.
+
+[Ansible Vault] provides support for many commands related to working with
+encrypted variable files.
+
+You can run your playbook with a flag to let `ansible-playbook` know that it
+needs to decrypt one of the variable files.
+
+```bash
+$ ansible-playbook --ask-vault-pass local.yml
+```
+
+You can also place your Ansible Vault password in a file and tell Ansible to
+use that password file.
+
+```bash
+echo 'my$ecretpa$$' > ~/.vault_pass
+ansible-playbook --vault-password-file ~/.vault_pass local.yml
+```
+
+You can avoid having to provide this flag altogether by defining the path to
+your vault password file in an environment variable (defined in
+`~/.bash_profile`, or `~/.bashrc`).
+
+```bash
+export ANSIBLE_VAULT_PASSWORD_FILE=~/.vault_pass
+```
+
+Or if you want to make this a setting associated with your repository, you can
+simply add a '[defaults]' section to your `ansible.cfg` that defines the path
+to the vault password file.
+
+```INI
+[defaults]
+. . .
+vault_password_file = ~/.vault_pass
+```
+
+[Ansible Vault]: https://docs.ansible.com/ansible/latest/user_guide/vault.html
+
+# Ansible Galaxy
+
+Wouldn't it be great if you could re-use roles that others have published?
+
+This is possible! You can install and use roles from a public repository known
+as [Ansible Galaxy]. It's also possible to obtain roles packaged on the web, or
+published in Git repositories (Github, Gitlab, or Bitbucket).
+
+To do this, create a `requirements.yml` file in the root of your Ansible
+repository to store the roles that your configuration requires.
+
+For our example we'll use a role that sets the timezone 
+```yml
+# Install timezone role
+- src: yatesr.timezone
+```
+
+To install the required roles, run `ansible-galaxy install -r requirements.yml`.
+
+```bash
+$ ansible-galaxy install -r requirements.yml
+- downloading role 'timezone', owned by yatesr
+- downloading role from https://github.com/yatesr/ansible-timezone/archive/1.1.0.tar.gz
+- extracting yatesr.timezone to /home/ec2-user/.ansible/roles/yatesr.timezone
+- yatesr.timezone (1.1.0) was installed successfully
+```
+
+Now that you've installed the [timezone role], we'll need to configure the
+timezone we want applied to our environment.
+
+Simply add the timezone setting to your `host_vars/local.yml` like below. We're
+using `America/Los_Angeles` to configure the system to use the Pacific Daylight
+Time (PDT) time zone.
+
+For other time zone values, see [List of TZ Database Time Zones - List].
+
+Also feel free to uncomment your Git name and email address so that it applies
+like it did before.
+
+```yml
+git_client_name: PeeWee Herman
+git_client_email: peewee@example.com
+timezone: America/Los_Angeles
+```
+
+And of course we have to add the role to our playbook.
+
+```yml
+---
+# This playbook deploys the entire setup to the Cloud9 development environment.
+- hosts: local
+  roles:
+   - development
+   - yatesr.timezone
+  vars_files:
+    - ~/.ansible_secrets.yml
+```
+
+Let's run a command to output our date/time, so we can compare it to what we
+see after reconfiguring our time zone.
+
+```bash
+$ date
+Fri Mar 29 03:09:26 UTC 2019
+```
+
+Now let's run our playbook again
+```bash
+$ ansible-playbook local.yml
+
+PLAY [local] *******************************************************************
+
+TASK [Gathering Facts] *********************************************************
+ok: [local]
+
+TASK [development : upgrade all packages] **************************************
+ok: [local]
+
+TASK [development : debug] *****************************************************
+ok: [local] => {
+    "ansible_user_id": "ec2-user"
+}
+
+TASK [development : configure git client] **************************************
+ok: [local]
+
+TASK [yatesr.timezone : include_vars] ******************************************
+ok: [local] => (item=/home/ec2-user/.ansible/roles/yatesr.timezone/vars/../vars/RedHat.yml)
+
+TASK [yatesr.timezone : Install tzdata for Debian based distros] ***************
+skipping: [local]
+
+TASK [yatesr.timezone : Install tzdata for RedHat based distros] ***************
+ok: [local]
+
+TASK [yatesr.timezone : Install tzdata for Archlinux based distros] ************
+skipping: [local]
+
+TASK [yatesr.timezone : Set timezone config] ***********************************
+ok: [local]
+
+TASK [yatesr.timezone : Set link to localtime] *********************************
+ok: [local]
+
+PLAY RECAP *********************************************************************
+local                      : ok=8    changed=0    unreachable=0    failed=0  
+```
+
+Now when we ask the system to output the date, we get the Pacific date/time.
+
+```bash
+$ date
+Mon Mar 25 21:17:18 PDT 2019
+```
+
+See [Ansible Galaxy Docs] for more information.
+
+[Ansible Galaxy]: https://galaxy.ansible.com/
+[Ansible Galaxy Docs]: https://docs.ansible.com/ansible/latest/reference_appendices/galaxy.html
+[timezone role]: https://galaxy.ansible.com/yatesr/timezone
+[List of TZ Database Time Zones - List]: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
+
+# Conclusion
+
+I hope this guide has been useful in jumpstarting your interest in using
+Ansible. I surely tried to mention many of the things I needed to get started
+and start using Ansible.
+
+I hope you're more comfortable with Ansible and find yourself navigating their
+own documentation with more ease now that you understand what it does and how to
+use it.
+
+I'm going to continue to expand upon what I've taught you above within my own
+Ansible repository - [redconfetti/cloud9-dev].
+
+We want to configure our workstation so that we have an SSH key pair
+established, ensure that the key is added to our Github account, and that all
+our repositories are cloned to `~/src`.
+
+[redconfetti/cloud9-dev]: https://github.com/redconfetti/cloud9-dev
